--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                         <img src="img/icons/arrow-down.svg" alt="">
                     </div>
                     <ul class="drop-content" id="drop-content">
-                        <li><a href="/src/ProductListPage/ProductList.html" id="Heavy">Важка зброя</a></li>
-                        <li><a href="/src/ProductListPage/ProductList.html" id="Light">Легка зброя</a></li>
-                        <li><a href="/src/ProductListPage/ProductList.html" id="amunition">Амуніція</a></li>
+                        <li><a href="../ProductListPage/ProductList.html" id="Heavy">Важка зброя</a></li>
+                        <li><a href="../ProductListPage/ProductList.html" id="Light">Легка зброя</a></li>
+                        <li><a href="../ProductListPage/ProductList.html" id="amunition">Амуніція</a></li>
                     </ul>
                 </nav>
                 <div class="balance">
