--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </ul>
                 </nav>
                 <div class="balance">
-                    <a href="../src/CartPage/Cart.html">
+                    <a href="CartPage/Cart.html">
                         <img src="img/icons/shopping-cart 1.svg" alt="" class="cart">
                     </a>
                     <h1>666</h1>
